<resources>
    <string name="app_name">Career Quest</string>
    <string name="title_home">Home</string>
    <string name="title_career">Career</string>
    <string name="title_profile">Profile</string>
    <string name="title_softskill">Soft Skill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started_using_our_apps">Get Started Using our Apps</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign Up here</string>
    <string name="google_sign_in">Google Sign-In</string>
    <string name="or_login_using_other_method">Or Login using other method</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="show_hide_password">Show/Hide Password</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="sign_in_to_continue">SIGN IN TO CONTINUE</string>
    <string name="create_an_account">Create an Account</string>
    <string name="email">EMAIL</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_up_using_other_method">Or Sign Up using other method</string>
    <string name="google_sign_up">Google Sign-Up</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign In here</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="cari_rekomendasi_mu">Cari Rekomendasi Mu!</string>
    <string name="history">History</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="event_picture" />
    <string name="event_title" />
    <string name="stats">Stats</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="change_password">Change Password</string>
    <string name="general_settings">General Settings</string>
    <string name="carerposibillity">Career Possibility</string>
    <string name="article_detail">detail artikel</string>
    <string name="article_title">judul artikel</string>
    <string name="author">author</string>
    <string name="date">date</string>
    <string name="content_description_media" />
    <string name="description" />
    <string name="confirm_password">Confirm Password</string>
    <string name="send_requests">Send Requests</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_change">Confirm Change</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="reset_password_title">Reset Password Request</string>
    <string name="old_password_fill">Please Input Your Old Password</string>
    <string name="email_requests_fill">Please Input Your Registered Email</string>
    <string name="email_empty_warning">Please enter your email address.</string>
    <string name="email_sent_success">Password reset email sent successfully!</string>
    <string name="change_password_fill">Please Input Minimum 8 Characters </string>>
</resources>