<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#42A5F5"
    tools:context=".regist.RegistPage">

    <!-- Back button -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_arrow_back_ios_24" />

    <!-- Form Card -->
    <LinearLayout
        android:id="@+id/formCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_below="@id/backButton"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:elevation="4dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded_card_background">

        <!-- Title -->
        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textSize="24sp"
            android:textColor="#42A5F5"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#D3D3D3"
            android:hint="@string/email"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edittext_background" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#D3D3D3"
            android:hint="@string/username"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPersonName"
            android:background="@drawable/rounded_edittext_background" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#D3D3D3"
            android:hint="@string/password"
            android:paddingStart="16dp"
            android:paddingEnd="48dp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext_background" />


        <!-- Sign Up Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Sign Up with Other Method -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/or_sign_up_using_other_method"
            android:textSize="12sp"
            android:textColor="#A0A0A0"
            android:layout_gravity="center_horizontal" />

        <!-- Google Sign-In Button -->
        <ImageView
            android:id="@+id/googleSignInButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/google"
            android:contentDescription="@string/google_sign_up"
            android:layout_gravity="center_horizontal" />

        <!-- Already have an account? -->
        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/already_have_an_account_sign_in_here"
            android:textColor="#A0A0A0"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
