<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#42A5F5"
    tools:context=".ui.change.ChangePassword">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:src="@drawable/baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/formCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="-40dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:elevation="4dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_card_background">

        <TextView
            android:id="@+id/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="24sp"
            android:textColor="#42A5F5"
            android:textStyle="bold"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/old_password_requirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password_fill"
            android:textSize="14sp"
            android:textColor="#A0A0A0"
            android:gravity="center"
            android:fontFamily="@font/poppinsmedium"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="#D3D3D3"
                android:hint="@string/old_password"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="text"
                android:background="@drawable/rounded_edittext_background" />
            <ImageView
                android:id="@+id/showHidePasswordIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:src="@drawable/baseline_visibility_off_24"
                android:contentDescription="@string/show_hide_password" />

        </FrameLayout>

        <TextView
            android:id="@+id/new_password_requirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_fill"
            android:textSize="14sp"
            android:textColor="#A0A0A0"
            android:gravity="center"
            android:fontFamily="@font/poppinsmedium"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="#D3D3D3"
                android:hint="@string/new_password"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="text"
                android:background="@drawable/rounded_edittext_background" />
            <ImageView
                android:id="@+id/showHidePasswordIcon2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:src="@drawable/baseline_visibility_off_24"
                android:contentDescription="@string/show_hide_password" />

        </FrameLayout>

        <!-- Password Field with Show/Hide Icon -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="#D3D3D3"
                android:hint="@string/confirm_password"
                android:paddingStart="16dp"
                android:paddingEnd="48dp"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edittext_background" />

            <ImageView
                android:id="@+id/showHidePasswordIcon3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:src="@drawable/baseline_visibility_off_24"
                android:contentDescription="@string/show_hide_password" />
        </FrameLayout>


        <Button
            android:id="@+id/confirm_change_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/confirm_change"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>