<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".regist.GetStarted">


    <ImageView
        android:id="@+id/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape"/>

    <ImageView
        android:id="@+id/get_started"
        android:layout_width="404dp"
        android:layout_height="258dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:src="@drawable/getstarted" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_started"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="25sp"
        android:textColor="@color/my_prime"
        android:text="@string/get_started_using_our_apps" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView1"
        android:width="200dp"
        android:text="@string/register"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:id="@+id/button1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:text="@string/login"
        android:layout_below="@id/button1"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:id="@+id/button2"/>
</RelativeLayout>
